app/assets/stylesheets/posts/_form.css
.posts__form__container {
  border: 1px solid black;
  border-radius: 5px;
  display: grid;
  grid-template-areas:
    "date show edit delete"
    "message message message message"
    ". . . .";
  grid-template-columns: 1fr auto auto;
  margin: 0.5rem 0;
  width: 50ch;
}

.posts__form__date {
  align-items: center;
  display: flex;
  grid-area: date;
  padding-left: 0.5rem;
}

.posts__form__show_link {
  grid-area: show;
}

.posts__form__edit_link {
  grid-area: edit;
}

.posts__form__delete_link {
  grid-area: delete;
}

.posts__form__message {
  border: none;
  border-radius: 0 0 5px 5px;
  box-sizing: border-box;
  font: unset;
  grid-area: message;
  padding: 0.5rem;
  resize: none;
}

